# with4gent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: v2_design_doc.md
src/: config.py  logic.py  main.py
src/services/: line_service.py  openai_service.py
src/utils/: anonymizer.py
tests/: test_logic.py  test_main.py
